# crf-migrate

./: .gitignore  CLAUDE.md  ORCHESTRATOR.md  README.md  app.py  pyproject.toml
.claude/: settings.json  settings.local.json
.github/agents/: code-reviewer.agent.md
.streamlit/: config.toml
docs/superpowers/plans/: 2026-04-19-session-resume.md
docs/superpowers/specs/: 2026-04-03-clean-sweep-loading-animation-design.md  2026-04-19-session-resume-design.md
motion/clean-sweep/: README.md  package-lock.json  package.json  tsconfig.json
motion/clean-sweep/scripts/: render-clean-sweep.mjs
motion/clean-sweep/src/: CleanSweep.tsx  Root.tsx  cleanSweepMotion.test.ts  cleanSweepMotion.ts
profiles/: cdisc_standard.yaml  rave_medidata.yaml  taimi.yaml  tami.yaml  veeva_vault.yaml
src/: csv_handler.py  extractor.py  field_parser.py  matcher.py  models.py  pdf_utils.py  profile_loader.py  profile_models.py  rule_engine.py  session.py  writer.py
tests/: conftest.py  test_csv_handler.py  test_extractor.py  test_field_parser.py  test_loader.py  test_matcher.py  test_matcher_placement.py  test_models.py  test_pdf_utils.py  test_phase2_fields.py  test_phase3_filters.py  test_phase3_pagination.py  test_phase3_repair.py  test_profile_editor.py  test_profile_loader.py  test_rule_engine.py  test_session.py  test_style_helpers.py  test_writer.py
tests/fixtures/: create_fixtures.py
ui/: components.py  crf_migrat_ui.pen  loader.py  phase1_review.py  phase2_review.py  phase3_review.py  phase4_review.py  profile_editor.py  style_helpers.py
